<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:minHeight="150dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"
             >

            <Button
                android:id="@+id/p_height_toggle"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="0px"
                android:paddingBottom="0px"
                android:text="@string/p_unit_toggle_text"
                android:textSize="10sp" />
            
            <LinearLayout
    		    android:layout_width="fill_parent"
    		    android:layout_height="wrap_content"
    		    android:orientation="horizontal"
    		    android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
    		    <EditText 
    		        android:id="@+id/p_first_input_box"
    		        android:layout_width="0dp"
    		        android:layout_height="wrap_content"
    		        android:layout_weight="1"
    		        android:inputType="number"
    		        android:minWidth="60dp" />
    		    <TextView
    		        android:id="@+id/p_first_caption"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content"
    		        android:text="@string/p_height1_unit_im"
    		        android:textColor="@android:color/black"
    		        android:textSize="16sp"/>
    		    <EditText 
    		        android:id="@+id/p_second_input_box"
    		        android:layout_width="0dp"
    		        android:layout_height="wrap_content"
    		        android:layout_weight="1"
    		        android:inputType="number"
    		        android:minWidth="60dp" />
    		    <TextView
    		        android:id="@+id/p_second_caption"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content"
    		        android:text="@string/p_height2_unit_im"
    		        android:textColor="@android:color/black"
    		        android:textSize="16sp"/>

    		</LinearLayout>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/p_submit_height"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_send" />

                    <Button
                        android:id="@+id/p_cancel_height"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_cancel" />

                </LinearLayout>
    

</LinearLayout>