<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:minHeight="150dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"
            android:gravity="center" >
    		<LinearLayout
    		    android:layout_width="fill_parent"
    		    android:layout_height="wrap_content"
    		    android:orientation="horizontal"
    		    android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
    		    <EditText 
    		        android:id="@+id/p_age_input_box"
    		        android:layout_width="0dp"
    		        android:layout_height="wrap_content"
    		        android:layout_weight="1"
    		        android:inputType="number" />
    		    <TextView
    		        android:id="@+id/p_age_caption"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content"
    		        android:text="@string/p_age_unit"
    		        android:textColor="@android:color/black"
    		        android:textSize="16sp"/>
    		</LinearLayout>
    		<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginRight="20dp"
                                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" >
    		                    <Button
                        android:id="@+id/p_submit_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_send" />

                    <Button
                        android:id="@+id/p_cancel_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_cancel" />

                </LinearLayout>
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    
    		    

</LinearLayout>